crates/sdk/macros/tests/ui/action_fail.stderr
error: missing required attribute `key = "..."`
  --> tests/ui/action_fail.rs:10:12
   |
10 | pub struct MissingKeyAction;
   |            ^^^^^^^^^^^^^^^^

error: missing required attribute `name = "..."`
  --> tests/ui/action_fail.rs:17:12
   |
17 | pub struct MissingNameAction;
   |            ^^^^^^^^^^^^^^^^^

error: Action derive requires a unit struct with no fields (e.g. `struct MyAction;`)
  --> tests/ui/action_fail.rs:22:12
   |
22 | pub struct ActionWithFields {
   |            ^^^^^^^^^^^^^^^^
